Remove appointment_types.html file and update navigation links across multiple pages to reflect the new structure. Adjusted links for upcoming and past appointments, ensuring consistency in the user interface. Improved overall navigation experience by linking to the correct pages.

--- a/html/new_routes/overall_dashboard.html
+++ b/html/new_routes/overall_dashboard.html
@@ -3368,25 +3368,21 @@
                         <h3 class="text-xs font-semibold uppercase tracking-wider text-theme-text-secondary mb-4">Analytics</h3>
                     </div>
                     <nav class="mt-2 flex-1 px-4 space-y-1">
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg bg-theme-bg-accent text-theme-primary border-l-4 border-theme-primary">
+                        <a href="overall_dashboard.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg bg-theme-bg-accent text-theme-primary border-l-4 border-theme-primary">
                             <span class="material-icons mr-3 text-theme-primary text-xl">dashboard</span>
                             Analytics Dashboard
                         </a>
-                        <a href="appointments.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                        <a href="upcomming_appointmets.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">event</span>
-                            Appointments
+                            Upcoming Appointments
+                        </a>
+                        <a href="past_appointments.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">history</span>
+                            Past Appointments
                         </a>
                         <a href="appointment_types.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">spa</span>
                             Services
-                        </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">people</span>
-                            Clients
-                        </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">analytics</span>
-                            Reports
                         </a>
                     </nav>
 
@@ -3394,15 +3390,11 @@
                         <h3 class="text-xs font-semibold uppercase tracking-wider text-theme-text-secondary mb-4">Settings</h3>
                     </div>
                     <nav class="mt-2 flex-1 px-4 space-y-1">
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                        <a href="profile.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">person</span>
                             Profile
                         </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">settings</span>
-                            Settings
-                        </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                        <a href="help_support.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">help</span>
                             Help & Support
                         </a>
@@ -3472,19 +3464,19 @@
     <!-- Mobile Navigation -->
     <div class="lg:hidden fixed bottom-0 left-0 right-0 bg-theme-bg-primary border-t border-theme-border px-4 py-2 z-50">
         <div class="flex justify-around items-center">
-            <a href="#" class="flex flex-col items-center p-2 text-theme-primary">
+            <a href="overall_dashboard.html" class="flex flex-col items-center p-2 text-theme-primary">
                 <span class="material-icons text-lg">dashboard</span>
                 <span class="text-xs mt-1 font-medium">Analytics</span>
             </a>
-            <a href="appointments.html" class="flex flex-col items-center p-2 text-theme-text-secondary">
+            <a href="upcomming_appointmets.html" class="flex flex-col items-center p-2 text-theme-text-secondary">
                 <span class="material-icons text-lg">event</span>
-                <span class="text-xs mt-1">Appointments</span>
+                <span class="text-xs mt-1">Upcoming</span>
             </a>
-            <a href="appointment_types.html" class="flex flex-col items-center p-2 text-theme-text-secondary">
-                <span class="material-icons text-lg">spa</span>
-                <span class="text-xs mt-1">Services</span>
+            <a href="past_appointments.html" class="flex flex-col items-center p-2 text-theme-text-secondary">
+                <span class="material-icons text-lg">history</span>
+                <span class="text-xs mt-1">Past</span>
             </a>
-            <a href="#" class="flex flex-col items-center p-2 text-theme-text-secondary">
+            <a href="profile.html" class="flex flex-col items-center p-2 text-theme-text-secondary">
                 <span class="material-icons text-lg">person</span>
                 <span class="text-xs mt-1">Profile</span>
             </a>
