--- a/html/new_routes/profile.html
+++ b/html/new_routes/profile.html
@@ -240,29 +240,21 @@
                         <h3 class="text-xs font-semibold uppercase tracking-wider text-theme-text-secondary mb-4">Analytics</h3>
                     </div>
                     <nav class="mt-2 flex-1 px-4 space-y-1">
-                        <a href="test.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">dashboard</span>
+                        <a href="overall_dashboard.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg bg-theme-bg-accent text-theme-primary border-l-4 border-theme-primary">
+                            <span class="material-icons mr-3 text-theme-primary text-xl">dashboard</span>
                             Analytics Dashboard
+                        </a>
+                        <a href="upcomming_appointmets.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">event</span>
+                            Upcoming Appointments
                         </a>
                         <a href="past_appointments.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">history</span>
                             Past Appointments
                         </a>
-                        <a href="upcomming_appointmets.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">upcoming</span>
-                            Upcoming Appointments
-                        </a>
                         <a href="appointment_types.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">spa</span>
                             Services
-                        </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">people</span>
-                            Clients
-                        </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">analytics</span>
-                            Reports
                         </a>
                     </nav>
 
@@ -270,15 +262,11 @@
                         <h3 class="text-xs font-semibold uppercase tracking-wider text-theme-text-secondary mb-4">Settings</h3>
                     </div>
                     <nav class="mt-2 flex-1 px-4 space-y-1">
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg bg-theme-bg-accent text-theme-primary border-l-4 border-theme-primary">
-                            <span class="material-icons mr-3 text-theme-primary text-xl">person</span>
+                        <a href="profile.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">person</span>
                             Profile
                         </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">settings</span>
-                            Settings
-                        </a>
-                        <a href="#" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                        <a href="help_support.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
                             <span class="material-icons mr-3 text-theme-text-secondary text-xl">help</span>
                             Help & Support
                         </a>
@@ -288,11 +276,11 @@
                 <!-- User Profile Section -->
                 <div class="p-4 border-t border-theme-border">
                     <div class="flex items-center space-x-3">
-                        <div class="w-10 h-10 rounded-lg bg-theme-primary/20 flex items-center justify-center text-theme-primary font-medium" id="sidebarUserInitials">
-                            --
+                        <div class="w-10 h-10 rounded-lg bg-theme-primary/20 flex items-center justify-center text-theme-primary font-medium">
+                            PK
                         </div>
                         <div class="flex-1 min-w-0">
-                            <p class="text-sm font-medium text-theme-text-primary truncate" id="sidebarUserName">--</p>
+                            <p class="text-sm font-medium text-theme-text-primary truncate">Prem Anand K</p>
                             <div class="flex items-center mt-1">
                                 <div class="h-2 w-2 rounded-full bg-success-500 mr-2"></div>
                                 <p class="text-xs text-theme-text-secondary">Online</p>
