--- a/html/new_routes/profile.html
+++ b/html/new_routes/profile.html
@@ -240,8 +240,8 @@
                         <h3 class="text-xs font-semibold uppercase tracking-wider text-theme-text-secondary mb-4">Analytics</h3>
                     </div>
                     <nav class="mt-2 flex-1 px-4 space-y-1">
-                        <a href="overall_dashboard.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg bg-theme-bg-accent text-theme-primary border-l-4 border-theme-primary">
-                            <span class="material-icons mr-3 text-theme-primary text-xl">dashboard</span>
+                        <a href="overall_dashboard.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
+                            <span class="material-icons mr-3  text-xl">dashboard</span>
                             Analytics Dashboard
                         </a>
                         <a href="upcomming_appointmets.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
@@ -262,8 +262,8 @@
                         <h3 class="text-xs font-semibold uppercase tracking-wider text-theme-text-secondary mb-4">Settings</h3>
                     </div>
                     <nav class="mt-2 flex-1 px-4 space-y-1">
-                        <a href="profile.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
-                            <span class="material-icons mr-3 text-theme-text-secondary text-xl">person</span>
+                        <a href="profile.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg  bg-theme-bg-accent text-theme-primary border-l-4 border-theme-primary">
+                            <span class="material-icons mr-3  text-theme-primary  text-xl">person</span>
                             Profile
                         </a>
                         <a href="help_support.html" class="group flex items-center px-4 py-3 text-sm font-medium rounded-lg text-theme-text-primary hover:bg-theme-bg-accent">
