Update titles and branding across appointment-related pages to reflect new service provider, Acuity Scheduling by Xtracut. Changes include updates to the HTML title tags and associated headings for consistency in user experience.

--- a/html/new_routes/overall_dashboard.html
+++ b/html/new_routes/overall_dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio revive by SkinEnvy - Analytics Dashboard</title>
+    <title>Acuity Scheduling by Xtracut - Analytics Dashboard</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -3357,8 +3357,8 @@
                             <span class="material-icons text-white text-xl">spa</span>
                         </div>
                         <div>
-                            <h2 class="text-lg font-bold text-theme-text-primary">Bio Revive</h2>
-                            <p class="text-xs text-theme-text-secondary">by SkinEnvy</p>
+                            <h2 class="text-lg font-bold text-theme-text-primary">Acuity Scheduling</h2>
+                            <p class="text-xs text-theme-text-secondary">by Xtracut</p>
                         </div>
                     </div>
                 </div>
