--- a/html/new_routes/upcomming_appointmets.html
+++ b/html/new_routes/upcomming_appointmets.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upcoming Appointments - Bio Revive by SkinEnvy</title>
+    <title>Upcoming Appointments - Acuity Scheduling by Xtracut</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -256,8 +256,8 @@
                             <span class="material-icons text-white text-xl">spa</span>
                         </div>
                         <div>
-                            <h2 class="text-lg font-bold text-theme-text-primary">Bio Revive</h2>
-                            <p class="text-xs text-theme-text-secondary">by SkinEnvy</p>
+                            <h2 class="text-lg font-bold text-theme-text-primary">Acuity Scheduling</h2>
+                            <p class="text-xs text-theme-text-secondary">by Xtracut</p>
                         </div>
                     </div>
                 </div>
@@ -1916,7 +1916,7 @@
                         <div class="p-6 border-t border-theme-border bg-theme-bg-accent rounded-b-2xl">
                             <div class="flex items-center justify-between">
                                 <div class="text-sm text-theme-text-secondary">
-                                    <strong>Bio Revive Upcoming Appointments</strong> - Version 2.0
+                                    <strong>Acuity Scheduling Upcoming Appointments</strong> - Version 2.0
                                 </div>
                                 <button onclick="closeHelpModal()" class="btn-modern">
                                     Got it, thanks!
